# shipthis-backend

./: .env.example  .gitignore  README.md  SECURITY.md  docker-compose.yml  nixpacks.toml  pyproject.toml  railway.toml  requirements.txt  vercel.json
caddy/: Caddyfile  Caddyfile.https  README.md
docker/: dev.Dockerfile  prod.Dockerfile
docs/: LANGCHAIN_COMPLETE_GUIDE.md  LANGCHAIN_LANGGRAPH_CHEATSHEET.md  LANGGRAPH_COMPLETE_GUIDE.md
infra/gcp/: .gitignore  README.md  cloudbuild.yaml  deploy.sh  destroy.sh  outputs.sh  quickstart.sh
infra/gcp/terraform/: cloud_run.tf  database.tf  iam.tf  main.tf  network.tf  outputs.tf  redis.tf  secrets.tf  storage.tf  variables.tf
infra/gcp/terraform/environments/: dev.tfvars  production.tfvars  staging.tfvars
scripts/: dev.sh  docker.sh
src/app/: __init__.py  main.py  server.py
src/app/config/: enums.py  settings.py
src/app/connections/: __init__.py  mongodb.py  redis.py
src/app/features/: __init__.py
src/app/features/auth/: dependency.py  dto.py  model.py  repository.py  router.py  security.py  service.py
src/app/features/health/: __init__.py  handler.py  router.py  service.py
src/app/features/routes/: dependency.py  dto.py  emissions.py  mapbox.py  repository.py  router.py  service.py
src/app/features/search/: __init__.py  dependency.py  dto.py  model.py  repository.py  router.py  service.py
src/app/lifecycle/: __init__.py  lifespan.py  signals.py
src/app/middleware/: __init__.py  global_exception_handler.py  server_middleware.py
src/app/utils/: __init__.py  apiFeatures.py  exceptions.py  httpResponse.py  logger.py  request_logger.py
tests/performance/: todo.md
